version/0.18/_sources/api/solver/_autosummary/settings/fluid_1.rst.txt
:orphan:

.. _fluid_1:

fluid
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.fluid_1.fluid
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`fluid_child <fluid_child_1>`


.. rubric:: Included in:

==================================================   =================================

Parent                                                                         Summary

==================================================   =================================
:ref:`cell_zone_conditions <cell_zone_conditions>`       'cell_zone_conditions' child.

==================================================   =================================

