version/0.20/_sources/api/solver/_autosummary/settings/fluid_1.rst.txt
:orphan:

.. _fluid_1:

fluid
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.fluid_1.fluid
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`fluid_child <fluid_child_1>`


.. rubric:: Included in:

==================================================   =================================

Parent                                                                         Summary

==================================================   =================================
:ref:`cell_zone_conditions <cell_zone_conditions>`       'cell_zone_conditions' child.

==================================================   =================================

